retirada do blog

--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   "userimg": "https://avatars2.githubusercontent.com/u/20156708?v=4",
   "sort": "created",
   "order": "asc",
-  "includeFork": true,
+  "includeFork": false,
   "theme": "light.css"
  }
 ]
